fix deployment